--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           </a-entity>
         </a-entity>
       </a-entity>
-      <!-- <a-sound src="src: url(sounds/warmth.mp3)" autoplay="true" position="0 2 -10"></a-sound> -->
+      <a-sound src="src: url(sounds/restore.mp3)" autoplay="true" position="0 2 -10"></a-sound>
 
     </a-scene>
 
