--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     </div>
     <div id="item-overlay">
       <div id="item-desc">
-        <div>Mechanical Control</div>
+        <div>Digital Control</div>
         <div id="item-desc-2">Shown in Matte Black</div>
       </div>
       <div id="info-button"><img class="info-icon" src="assets/icons/Info_Circle.svg" alt=""/><span id="info-text">Anthem
